fixed all misspellings and fine tuned layout at below 768 and below 480

--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
                 <div class="card">
                   <div class="front">
                     <i class="fas fa-user"></i>
-                    <h3>About Me</h3>
+                    <h4>About Me</h4>
+                    <span class="click-hint">click me</span>
                   </div>
                   <div class="back">
                     <p>
@@ -120,7 +121,8 @@
                 <div class="card">
                   <div class="front">
                     <i class="fa-solid fa-dumbbell"></i>
-                    <h3>Billy's Strengths</h3>
+                    <h4>Billy's Strengths</h4>
+                    <span class="click-hint">click me</span>
                   </div>
                   <div class="back">
                     <p>
@@ -139,7 +141,8 @@
                 <div class="card">
                   <div class="front">
                     <i class="fas fa-lightbulb"></i>
-                    <h3>How I Could Help</h3>
+                    <h4>How I Could Help</h4>
+                    <span class="click-hint">click me</span>
                   </div>
                   <div class="back">
                     <p>
@@ -158,7 +161,8 @@
                 <div class="card">
                   <div class="front">
                     <i class="fa-solid fa-question"></i>
-                    <h3>Why Did I Contact You</h3>
+                    <h4>Why Did I Contact You</h4>
+                    <span class="click-hint">click me</span>
                   </div>
                   <div class="back">
                     <p>
@@ -181,10 +185,10 @@
           <h2>My Process</h2>
           <p class="body">
             I am just getting started in my side business for building websites.
-            I have 2+ years working for a company that host and maintains over
-            1,000 shopify stores, I am fortunate to have this job and really
+            I have 2+ years working for a company that hosts and maintains over
+            1,000 Shopify stores, I am fortunate to have this job and really
             appreciate the variety it provides. I have been building shops on
-            Big Cartel, Wix and shopify for over 10 years now. I once had my own
+            Big Cartel, Wix and Shopify for over 10 years now. I once had my own
             online store where I would sell merch and tickets for events. I am
             not a content writer or designer but I can help with some aspects of
             that if needed.
@@ -192,7 +196,7 @@
           <div class="process-steps">
             <div class="process-step">
               <div class="step-icon">1</div>
-              <h3>Discover your Needs</h3>
+              <h4>Discover your Needs</h4>
               <p class="process-body">
                 Let's start with a free 15-minute consultation to see if we're a
                 good match. I'll ask about your business, your goals, and who
@@ -202,7 +206,7 @@
             </div>
             <div class="process-step">
               <div class="step-icon">2</div>
-              <h3>Identify your Branding</h3>
+              <h4>Identify your Branding</h4>
               <p class="process-body">
                 We'll outline your website's layout, colors, assets, and fonts
                 to create a unique look that best represents your business. I'll
@@ -212,7 +216,7 @@
             </div>
             <div class="process-step">
               <div class="step-icon">3</div>
-              <h3>Develop & Test your Website</h3>
+              <h4>Develop & Test your Website</h4>
               <p class="process-body">
                 As I develop your site, I can share progress updates each day I
                 work on it. I'll also test everything thoroughly to ensure your
@@ -221,7 +225,7 @@
             </div>
             <div class="process-step">
               <div class="step-icon">4</div>
-              <h3>Launch & Support</h3>
+              <h4>Launch & Support</h4>
               <p class="process-body">
                 Going live with your new site can be stressful. If you need
                 support, I'm here to help. I can also handle any future requests
@@ -246,7 +250,7 @@
             <div class="process-steps">
               <div class="process-step">
                 <div class="step-icon">1</div>
-                <h3>New Build</h3>
+                <h4>New Build</h4>
                 <p>
                   Some businesses out there still don't have an online presence
                   or website. I can help you find and purchase your site's
@@ -256,7 +260,7 @@
               </div>
               <div class="process-step">
                 <div class="step-icon">2</div>
-                <h3>New Build+</h3>
+                <h4>New Build+</h4>
                 <p>
                   Can offer the same service to build your site from the ground
                   up and offer support for the first 30 days after launch. This
@@ -266,16 +270,16 @@
               </div>
               <div class="process-step">
                 <div class="step-icon">3</div>
-                <h3>Full Website Update</h3>
+                <h4>Full Website Update</h4>
                 <p>
                   Maybe you already have a website but it needs a refresh. I can
                   help you update your site to make it more appealing. This
-                  includes updating the your website and improving performance.
+                  includes updating your website and improving performance.
                 </p>
               </div>
               <div class="process-step">
                 <div class="step-icon">4</div>
-                <h3>Some Updates to Current Site</h3>
+                <h4>Some Updates to Current Site</h4>
                 <p>
                   Not all sites need a big overhaul. I can help with specific
                   small updates you may need, like improving user experience or
@@ -421,9 +425,9 @@
                 <div class="project-content">
                   <h3>It's a 2000's Party</h3>
                   <p>
-                    I had fun on this rebuild for It's A 2000's Party Site. From
-                    mock ups for each page, I was able to replicate and create
-                    custom solutions to match the vision of the mock ups.
+                    I had a blast working on this complete rebuild for It's A
+                    2000's Party! Working from detailed mockups, I created
+                    custom solutions that captured nostalgic 2000s energy.
                   </p>
                   <span class="project-link">
                     View Project
@@ -477,8 +481,8 @@
                   on the complexity of the project.
                 </li>
                 <li>
-                  Create a website that that builds your brand and puts you on
-                  the map to brings in new customers.
+                  Create a website that builds your brand and puts you on the
+                  map to brings in new customers.
                 </li>
                 <li>
                   I will set you up for success with a site that you can manage
@@ -522,7 +526,7 @@
           <div class="service-cards cards">
             <div class="service-card">
               <i class="fas fa-laptop-code"></i>
-              <h3>Domain Purchase & Set Up</h3>
+              <h4>Domain Purchase & Set Up</h4>
               <p>
                 Can assist with finding, purchasing and connecting your web
                 domain.
@@ -530,14 +534,14 @@
             </div>
             <div class="service-card">
               <i class="fa-solid fa-shirt"></i>
-              <h3>Add and set up your products</h3>
+              <h4>Add and set up your products</h4>
               <p>
                 Every shop needs products to sell, I can help add your products.
               </p>
             </div>
             <div class="service-card">
               <i class="fa-solid fa-graduation-cap"></i>
-              <h3>Teach you how to use Shopify</h3>
+              <h4>Teach you how to use Shopify</h4>
               <p>
                 I can help guide you on the basics and even advanced features of
                 Shopify.
@@ -545,7 +549,7 @@
             </div>
             <div class="service-card">
               <i class="fas fa-search"></i>
-              <h3>Technical Support</h3>
+              <h4>Technical Support</h4>
               <p>
                 I can help with debugging or implementing an advanced feature
                 you may want.
@@ -587,7 +591,7 @@
       <section id="pricing" class="call-to-action color-3">
         <div class="pricing-container">
           <div class="pricing-section">
-            <h2>Let's Talk Pricing!</h2>
+            <h3>Let's Talk Pricing!</h3>
             <div class="pricing-details-text">
               <p class="pricing-intro">
                 1st three clients get a 25% discount on their first project!<br />After
@@ -643,10 +647,10 @@
           <div class="section-divider"></div>
 
           <div class="shopify-section">
-            <h2>Why I Recommend Shopify</h2>
+            <h3>Why I Recommend Shopify</h3>
             <div class="body pricing-details-text">
               <p class="shopify-intro">
-                I did the math, I have worked 1900+ hours on hundreds of shopify
+                I did the math, I have worked 1900+ hours on hundreds of Shopify
                 shops. <br />I honestly think Shopify is a great platform to
                 use.
                 <br />
